samples/_failures_safe/1761313426_50c855_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a14708c.c: In function ‘main’:
./samples/SAFE/__tmp_8a14708c.c:141:18: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  141 |     init_matrix(&mat
      |                  ^~~
      |                  mat2
./samples/SAFE/__tmp_8a14708c.c:141:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_8a14708c.c:141:21: error: expected ‘)’ at end of input
  141 |     init_matrix(&mat
      |                ~    ^
      |                     )
./samples/SAFE/__tmp_8a14708c.c:141:5: error: expected declaration or statement at end of input
  141 |     init_matrix(&mat
      |     ^~~~~~~~~~~
